tests/unsafe/annotations/global_pub.snap
---
source: tests/lib.rs
assertion_line: 201
---
exit_code = 1
stdout = ''
stderr = '''
error: function foo directly contains 1 unjustified unsafe axiom, but is not annotated unsafe
 --> [SNIFF_TEST_DIR]/unsafe/annotations/global_pub.rs:3:1
  |
3 | pub fn foo(ptr: *const i32) -> i32 {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: reachable from [*foo*]
note: raw pointer derefence here
 --> [SNIFF_TEST_DIR]/unsafe/annotations/global_pub.rs:4:15
  |
4 |     unsafe { *ptr }
  |               ^^^

error: aborting due to 1 previous error

'''
